tests/ui/const-generics/mgca/braced-const-infer.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for implementations
  --> $DIR/braced-const-infer.rs:7:17
   |
LL | impl dyn Trait<{_}> {}
   |                 ^ not allowed in type signatures

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
